Eliminate title flex layout to solve the problem of overflow on the left side of the title text

--- a/src/css/content-theme/classic.css
+++ b/src/css/content-theme/classic.css
@@ -54,8 +54,6 @@ pre.vditor-sv:focus {
   line-height: 32px;
   color: var(--TextMedium);
   text-align: justify;
-  display: flex;
-  align-items: center;
   border-bottom: 1px solid var(--TextLight);
   padding-bottom: 4px;
 }
@@ -65,8 +63,6 @@ pre.vditor-sv:focus {
   line-height: 28px;
   color: var(--TextMedium);
   text-align: justify;
-  display: flex;
-  align-items: center;
   border-bottom: 1px solid var(--TextLight);
   padding-bottom: 4px;
 }
@@ -76,8 +72,6 @@ pre.vditor-sv:focus {
   line-height: 24px;
   color: var(--TextMedium);
   text-align: justify;
-  display: flex;
-  align-items: center;
   border-bottom: 1px solid var(--TextLight);
   padding-bottom: 4px;
 }
@@ -87,8 +81,6 @@ pre.vditor-sv:focus {
   line-height: 22px;
   color: var(--TextMedium);
   text-align: justify;
-  display: flex;
-  align-items: center;
 }
 .vditor-reset h5 {
   font-weight: 900;
@@ -96,8 +88,6 @@ pre.vditor-sv:focus {
   line-height: 20px;
   color: var(--TextMedium);
   text-align: justify;
-  display: flex;
-  align-items: center;
 }
 .vditor-reset h6 {
   font-weight: 900;
@@ -105,8 +95,6 @@ pre.vditor-sv:focus {
   line-height: 18px;
   color: var(--TextRegular);
   text-align: justify;
-  display: flex;
-  align-items: center;
 }
 .vditor-reset h1,
 .vditor-reset h2,
