--- a/src/css/content-theme/modern.css
+++ b/src/css/content-theme/modern.css
@@ -55,8 +55,6 @@ pre.vditor-sv:focus {
     line-height: 32px;
     color: var(--TextMedium);
     text-align: justify;
-    display: flex;
-    align-items: center;
     border-bottom: 1px solid var(--TextLight);
     padding-bottom: 4px;
 }
@@ -66,8 +64,6 @@ pre.vditor-sv:focus {
     line-height: 28px;
     color: var(--TextMedium);
     text-align: justify;
-    display: flex;
-    align-items: center;
     border-bottom: 1px solid var(--TextLight);
     padding-bottom: 4px;
 }
@@ -77,8 +73,6 @@ pre.vditor-sv:focus {
     line-height: 24px;
     color: var(--TextMedium);
     text-align: justify;
-    display: flex;
-    align-items: center;
     border-bottom: 1px solid var(--TextLight);
     padding-bottom: 4px;
 }
@@ -88,8 +82,6 @@ pre.vditor-sv:focus {
     line-height: 22px;
     color: var(--TextMedium);
     text-align: justify;
-    display: flex;
-    align-items: center;
 }
 .vditor-reset h5 {
     font-weight: 900;
@@ -97,8 +89,6 @@ pre.vditor-sv:focus {
     line-height: 20px;
     color: var(--TextMedium);
     text-align: justify;
-    display: flex;
-    align-items: center;
 }
 .vditor-reset h6 {
     font-weight: 900;
@@ -106,8 +96,6 @@ pre.vditor-sv:focus {
     line-height: 18px;
     color: var(--TextRegular);
     text-align: justify;
-    display: flex;
-    align-items: center;
 }
 .vditor-reset h1,
 .vditor-reset h2,
